--- a/index.html
+++ b/index.html
@@ -2,50 +2,52 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flutterbea</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="container">
-    <div class="sidebar">
-      <button onclick="showSection('about')">About</button>
-      <button onclick="showSection('links')">Links</button>
-      <button onclick="showSection('contact')">Contact</button>
+
+<div class="container">
+  <div class="sidebar">
+    <button onclick="showSection('about')">About</button>
+    <button onclick="showSection('links')">Links</button>
+    <button onclick="showSection('contact')">Contact</button>
+  </div>
+
+  <div class="main">
+    <div class="banner">
+      <img src="assets/banner.jpg" alt="Banner">
     </div>
 
-    <div class="main">
-      <div class="banner">
-        <img src="assets/banner.jpg" alt="Banner">
+    <div class="content active" id="about">
+      <div class="glass-box">
+        <h2>Привет, сталкер/ша</h2>
+        <p>На связи Flutterbea, позывной Безликий.</p>
+        <p>Не буду тянуть, приступим.</p>
+        <p>Я не делаю рекламу и никого не ставлю в качестве спонсора.</p>
+        <p>Я мирный, а собственно все конфликты обходят меня десятой дорогой.</p>
+        <p>Всегда открыт для чего-то нового. Могу обсудить практически всё.</p>
+        <p>Если не отвечаю — наберись терпения. В скором времени я отвечу.</p>
       </div>
-      <div class="content" id="about">
-        <div class="glass-box">
-          <h2>Привет, сталкер/ша</h2>
-          <p>На связи Flutterbea, позывной Безликий.</p>
-          <p>Не буду тянуть, приступим.</p>
-          <p>Я не делаю рекламу и никого не ставлю в качестве спонсора.</p>
-          <p>Я мирный, а собственно все конфликты обходят меня десятой дорогой.</p>
-          <p>Всегда открыт для чего-то нового. Могу обсудить практически всё.</p>
-          <p>Если не отвечаю — наберись терпения. В скором времени я отвечу.</p>
-        </div>
-      </div>
+    </div>
 
-      <div class="content hidden" id="links">
-        <div class="glass-box">
-          <h2>Links</h2>
-          <p><a href="https://t.me/flutterbea" target="_blank">@flutterbea</a></p>
-        </div>
+    <div class="content" id="links">
+      <div class="glass-box">
+        <h2>Links</h2>
+        <p><a href="https://t.me/flutterbea" target="_blank">@flutterbea</a></p>
       </div>
+    </div>
 
-      <div class="content hidden" id="contact">
-        <div class="glass-box">
-          <h2>Contact</h2>
-          <p>Write me on Telegram: <a href="https://t.me/flutterbea">@flutterbea</a></p>
-        </div>
+    <div class="content" id="contact">
+      <div class="glass-box">
+        <h2>Contact</h2>
+        <p>Telegram: <a href="https://t.me/flutterbea">@flutterbea</a></p>
       </div>
     </div>
   </div>
+</div>
 
-  <script src="script.js"></script>
 </body>
 </html>
